# static-npm

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: lint.yml  test_macos.yml  test_macos_x64.yml  test_ubuntu.yml  test_win.yml
src/static_npm/: __init__.py  app.py  cli.py  ensure_npm_exists.py  node.py  npm.py  npm_tool.py  npx.py  paths.py  prog_exec.py  running_process.py
tests/: test_cli.py  test_live_server.py  test_npm.py
